retrieveUnpackaged/objects/Applications1NotInUse__c.object
<CustomObject>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Applicant_is_Delinquent_on_any_federal_d__c</fullName>
        <label>Applicant is Delinquent on federal debt?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Application_Due_Date__c</fullName>
        <label>Application Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Application_Package_ID__c</fullName>
        <label>Application Package ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application_Type__c</fullName>
        <label>Application Type</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Continuation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PS Amendments</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <label>Approval Status</label>
        <picklist>
            <picklistValues>
                <fullName>Submitted</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Onhold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Withdraw</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Areas_affected_by_the_Program__c</fullName>
        <label>Areas affected by the Program</label>
        <picklist>
            <picklistValues>
                <fullName>Alabama</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alaska</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arizona</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arkansas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>California</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Colorado</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Connecticut</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delaware</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Florida</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Georgia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hawaii</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Idaho</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Illinois</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indiana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Iowa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kansas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kentucky</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Louisiana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maryland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Massachusetts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Michigan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Minnesota</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mississippi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missouri</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Montana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nebraska</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nevada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Hampshire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Jersey</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Clarification_Summary__c</fullName>
        <label>Clarification Summary</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Comment__c</fullName>
        <label>Comment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Continuation_Changes__c</fullName>
        <label>Continuation Changes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Cost_Effectiveness_and_Budget_Adequacy__c</fullName>
        <label>Cost Effectiveness and Budget Adequacy</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>DUNS_Number__c</fullName>
        <label>DUNS Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Email2__c</fullName>
        <formula>$User.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Evaluation_Summary_or_Plan__c</fullName>
        <label>Evaluation Summary or Plan</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Executive_Summary__c</fullName>
        <label>Executive Summary</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Federal_Award_Identifier__c</fullName>
        <label>Federal Award Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Federal_Entity_Identifier__c</fullName>
        <label>Federal Entity Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>If_yes_Please_enter_the_review_date__c</fullName>
        <label>If yes, Please enter the review date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>If_yes_Please_explain__c</fullName>
        <label>If yes, Please explain</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Legal_Name__c</fullName>
        <label>Legal Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Local_State_Federal_Government_Match__c</fullName>
        <label>Local, State &amp; Federal Government Match</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Organization_Address__c</fullName>
        <formula>$User.Address_Line_1__c</formula>
        <label>Organization Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organization_Name__c</fullName>
        <formula>$User.MobilePhone</formula>
        <label>Organization Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organizational_Capability__c</fullName>
        <label>Organizational Capability</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Other_Revenue__c</fullName>
        <label>Other Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Private_Match__c</fullName>
        <label>Private Match</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Project_Title__c</fullName>
        <label>Project Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Proposed_End_Date__c</fullName>
        <label>Proposed End  Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Proposed_Start_Date__c</fullName>
        <label>Proposed Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Rationale_and_Approach_Program_Design__c</fullName>
        <label>Rationale and Approach/Program Design</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Revision__c</fullName>
        <label>Revision</label>
        <picklist>
            <controllingField>Type_of_Application__c</controllingField>
            <picklistValues>
                <fullName>Increase Award</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Decrease Award</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Increase Duration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Decrease Duration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other (specify).</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Select_a_Program__c</fullName>
        <label>Select a Program</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State_Application_Identifier__c</fullName>
        <label>State Application Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State_Executive_order_12372__c</fullName>
        <inlineHelpText>The Application is Subject to Review by State Executive Order 12372 Process</inlineHelpText>
        <label>State Executive order 12372</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Review In progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Withdrawn</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ReOpen</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Test_Pdf__c</fullName>
        <defaultValue>&quot;https://cns--devsb12--c.cs32.content.force.com/servlet/servlet.FileDownload?file=015r00000008uNI&quot;</defaultValue>
        <label>Test Pdf</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Total_Match_Dollars__c</fullName>
        <label>Total Match Dollars</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Type_of_Application__c</fullName>
        <label>Type of Application</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Continuation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Revision.</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type_of_Submission__c</fullName>
        <label>Type of Submission</label>
        <picklist>
            <picklistValues>
                <fullName>Preapplication</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Application</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Changed/Corrected Application</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Version__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Version</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Zip_4__c</fullName>
        <label>Zip+4</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip__c</fullName>
        <label>Zip</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <label>Applications1 -Not In Use</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Application ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Applications1NotInUse</pluralLabel>
    <recordTypes>
        <fullName>Indian_Tribe</fullName>
        <active>true</active>
        <label>Indian Tribe</label>
    </recordTypes>
    <recordTypes>
        <fullName>Program_Specific</fullName>
        <active>true</active>
        <description>Program Specific Application Package</description>
        <label>Program Specific</label>
    </recordTypes>
    <recordTypes>
        <fullName>Standard</fullName>
        <active>true</active>
        <description>Standard Application Package</description>
        <label>Standard</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Internal_Users_cannot_save</fullName>
        <active>true</active>
        <description>Internal User cannot Save Applications.</description>
        <errorConditionFormula>$Profile.Name = &quot;Test USER&quot;</errorConditionFormula>
        <errorMessage>Internal User cannot Save records</errorMessage>
    </validationRules>
</CustomObject>